--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -10,18 +10,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
       <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;" />
       <VBox layoutX="176.0" layoutY="48.0" prefHeight="533.0" prefWidth="516.0" style="-fx-background-color: #e6e6e6;">
          <children>
-            <TableView prefHeight="165.0" prefWidth="592.0">
+            <TableView fx:id="fundTableView" prefHeight="165.0" prefWidth="592.0">
               <columns>
                 <TableColumn fx:id="colFundName" prefWidth="87.0" resizable="false" text="Funds Name" />
-                  <TableColumn prefWidth="107.0" resizable="false" text="Created Date" />
-                <TableColumn prefWidth="97.0" resizable="false" text="Balance" />
-                  <TableColumn prefWidth="107.0" resizable="false" text="Total Spending" />
-                  <TableColumn prefWidth="117.0" resizable="false" text="Last Recharge" />
+                  <TableColumn fx:id="colCreatedDate" prefWidth="107.0" resizable="false" text="Created Date" />
+                <TableColumn fx:id="colBalance" prefWidth="97.0" resizable="false" text="Balance" />
+                  <TableColumn fx:id="colTotalSpending" prefWidth="107.0" resizable="false" text="Total Spending" />
+                  <TableColumn fx:id="colLastRecharge" prefWidth="117.0" resizable="false" text="Last Recharge" />
               </columns>
             </TableView>
             <ListView prefHeight="373.0" prefWidth="516.0" />
@@ -30,11 +30,11 @@
       <VBox layoutX="13.0" layoutY="445.0" prefHeight="166.0" prefWidth="156.0" spacing="5.0" style="-fx-background-color: #e6e6e6;">
          <children>
             <Label text="Expense Name" />
-            <TextField promptText="Event" />
+            <TextField fx:id="tfEventName" promptText="Event" />
             <Label text="Expense Cost" />
-            <TextField promptText="Cost" />
-            <Button mnemonicParsing="false" text="Add to" />
-            <TextField prefHeight="25.0" prefWidth="61.0" promptText="Funds" />
+            <TextField fx:id="tfEventCost" promptText="Cost" />
+            <Button fx:id="btnAddToFund" mnemonicParsing="false" text="Add to" />
+            <TextField fx:id="tfExpenseDestination" prefHeight="25.0" prefWidth="61.0" promptText="Funds" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -56,10 +56,10 @@
             <TextField fx:id="tfNewFundName" prefHeight="25.0" prefWidth="190.0" />
             <Button fx:id="btnCreateFund" mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" text="Create Fund" />
             <Label text="Deposite" />
-            <TextField fx:id="tfDeposite" prefHeight="25.0" prefWidth="83.0" />
+            <TextField fx:id="tfDeposited" prefHeight="25.0" prefWidth="83.0" />
             <Label text="To Funds" />
             <TextField fx:id="tfFundDestination" prefHeight="25.0" prefWidth="83.0" />
-            <Button fx:id="btnDeposite" mnemonicParsing="false" text="Deposite" />
+            <Button fx:id="btnDeposited" mnemonicParsing="false" text="Deposite" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
