--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -15,7 +15,7 @@
       <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;" />
       <VBox layoutX="176.0" layoutY="48.0" prefHeight="533.0" prefWidth="516.0" style="-fx-background-color: #e6e6e6;">
          <children>
-            <TableView fx:id="fundTableView" prefHeight="165.0" prefWidth="592.0">
+            <TableView fx:id="fundTableView" onSort="#initialize" prefHeight="165.0" prefWidth="592.0">
               <columns>
                 <TableColumn fx:id="colFundName" prefWidth="87.0" resizable="false" text="Funds Name" />
                   <TableColumn fx:id="colCreatedDate" prefWidth="107.0" resizable="false" text="Created Date" />
@@ -54,7 +54,7 @@
          <children>
             <Label text="Funds Name" />
             <TextField fx:id="tfNewFundName" prefHeight="25.0" prefWidth="190.0" />
-            <Button fx:id="btnCreateFund" mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" text="Create Fund" />
+            <Button fx:id="btnCreateFund" mnemonicParsing="false" onAction="#setBtnAddToFund" prefHeight="25.0" prefWidth="155.0" text="Create Fund" />
             <Label text="Deposite" />
             <TextField fx:id="tfDeposited" prefHeight="25.0" prefWidth="83.0" />
             <Label text="To Funds" />
