--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -10,10 +10,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
       <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;" />
-      <VBox layoutX="176.0" layoutY="48.0" prefHeight="533.0" prefWidth="516.0" style="-fx-background-color: #e6e6e6;">
+      <VBox layoutX="176.0" layoutY="48.0" prefHeight="533.0" prefWidth="632.0" style="-fx-background-color: #e6e6e6;">
          <children>
             <TableView fx:id="fundTableView" onSort="#initialize" prefHeight="165.0" prefWidth="592.0">
               <columns>
@@ -21,10 +21,11 @@
                   <TableColumn fx:id="colCreatedDate" prefWidth="107.0" resizable="false" text="Created Date" />
                 <TableColumn fx:id="colBalance" prefWidth="97.0" resizable="false" text="Balance" />
                   <TableColumn fx:id="colTotalSpending" prefWidth="107.0" resizable="false" text="Total Spending" />
-                  <TableColumn fx:id="colLastRecharge" prefWidth="117.0" resizable="false" text="Last Recharge" />
+                  <TableColumn fx:id="colTotalDeposited" prefWidth="114.0" resizable="false" text="Total Deposite" />
+                  <TableColumn fx:id="colLastRecharge" prefWidth="120.0" resizable="false" text="Last Time Deposited" />
               </columns>
             </TableView>
-            <ListView prefHeight="373.0" prefWidth="516.0" />
+            <ListView prefHeight="371.0" prefWidth="494.0" />
          </children>
       </VBox>
       <VBox layoutX="13.0" layoutY="445.0" prefHeight="166.0" prefWidth="156.0" spacing="5.0" style="-fx-background-color: #e6e6e6;">
@@ -40,26 +41,16 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox layoutX="695.0" layoutY="215.0" prefHeight="347.0" prefWidth="100.0" spacing="10.0">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Button" />
-            <Button layoutX="20.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Button" />
-            <Button layoutX="20.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Button" />
-         </children>
-         <padding>
-            <Insets left="10.0" top="10.0" />
-         </padding>
-      </VBox>
       <VBox layoutX="13.0" layoutY="218.0" prefHeight="166.0" prefWidth="156.0" spacing="5.0">
          <children>
             <Label text="Funds Name" />
             <TextField fx:id="tfNewFundName" prefHeight="25.0" prefWidth="190.0" />
-            <Button fx:id="btnCreateFund" mnemonicParsing="false" onAction="#setBtnAddToFund" prefHeight="25.0" prefWidth="155.0" text="Create Fund" />
+            <Button fx:id="btnCreateFund" mnemonicParsing="false" onAction="#setBtnCreateFund" prefHeight="25.0" prefWidth="155.0" text="Create Fund" />
             <Label text="Deposite" />
             <TextField fx:id="tfDeposited" prefHeight="25.0" prefWidth="83.0" />
             <Label text="To Funds" />
             <TextField fx:id="tfFundDestination" prefHeight="25.0" prefWidth="83.0" />
-            <Button fx:id="btnDeposited" mnemonicParsing="false" text="Deposite" />
+            <Button fx:id="btnDeposited" mnemonicParsing="false" onAction="#setBtnDeposited" text="Deposite" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
