--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -10,22 +10,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
       <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;" />
-      <VBox layoutX="176.0" layoutY="48.0" prefHeight="533.0" prefWidth="632.0" style="-fx-background-color: #e6e6e6;">
+      <VBox layoutX="176.0" layoutY="48.0" prefHeight="166.0" prefWidth="765.0" style="-fx-background-color: #e6e6e6;">
          <children>
-            <TableView fx:id="fundTableView" onSort="#initialize" prefHeight="165.0" prefWidth="592.0">
+            <TableView fx:id="fundTableView" onSort="#initialize" prefHeight="166.0" prefWidth="652.0">
               <columns>
                 <TableColumn fx:id="colFundName" prefWidth="87.0" resizable="false" text="Funds Name" />
                   <TableColumn fx:id="colCreatedDate" prefWidth="107.0" resizable="false" text="Created Date" />
                 <TableColumn fx:id="colBalance" prefWidth="97.0" resizable="false" text="Balance" />
                   <TableColumn fx:id="colTotalSpending" prefWidth="107.0" resizable="false" text="Total Spending" />
                   <TableColumn fx:id="colTotalDeposited" prefWidth="114.0" resizable="false" text="Total Deposite" />
-                  <TableColumn fx:id="colLastRecharge" prefWidth="120.0" resizable="false" text="Last Time Deposited" />
+                  <TableColumn fx:id="colLastDeposited" prefWidth="125.0" resizable="false" text="Last Deposited" />
+                  <TableColumn fx:id="colLastDepositedTime" prefWidth="127.0" resizable="false" text=" Last Deposited Time" />
               </columns>
             </TableView>
-            <ListView prefHeight="371.0" prefWidth="494.0" />
          </children>
       </VBox>
       <VBox layoutX="13.0" layoutY="445.0" prefHeight="166.0" prefWidth="156.0" spacing="5.0" style="-fx-background-color: #e6e6e6;">
@@ -61,5 +61,10 @@
       <Label layoutX="14.0" layoutY="619.0" prefHeight="17.0" prefWidth="79.0" text="Last visit time:" underline="true" />
       <Label fx:id="lbUserName" layoutX="91.0" layoutY="14.0" text="userName" />
       <Label layoutX="93.0" layoutY="619.0" text="loginTime" />
+      <VBox layoutX="176.0" layoutY="225.0" prefHeight="353.0" prefWidth="516.0">
+         <children>
+            <ListView prefHeight="365.0" prefWidth="516.0" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
