--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -2,15 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1121.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="728.0" prefWidth="1118.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
       <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;" />
       <VBox layoutX="176.0" layoutY="48.0" prefHeight="166.0" prefWidth="843.0" style="-fx-background-color: #e6e6e6;">
@@ -29,14 +29,15 @@
             </TableView>
          </children>
       </VBox>
-      <VBox layoutX="13.0" layoutY="445.0" prefHeight="166.0" prefWidth="156.0" spacing="5.0" style="-fx-background-color: #e6e6e6;">
+      <VBox layoutX="13.0" layoutY="445.0" prefHeight="221.0" prefWidth="156.0" spacing="5.0" style="-fx-background-color: #e6e6e6;">
          <children>
             <Label text="Expense Name" />
             <TextField fx:id="tfEventName" promptText="Event" />
             <Label text="Expense Cost" />
             <TextField fx:id="tfEventCost" promptText="Cost" />
-            <Button fx:id="btnAddToFund" mnemonicParsing="false" onAction="#setBtnAddExpenseToFund" text="Add to" />
-            <TextField fx:id="tfExpenseDestination" prefHeight="25.0" prefWidth="61.0" promptText="Funds" />
+            <Button fx:id="btnAddToFund" mnemonicParsing="false" onAction="#setBtnAddToFund" text="Add to" />
+            <TextField fx:id="txtFundName" />
+            <ChoiceBox fx:id="tfExpenseDestination" prefWidth="150.0" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -50,7 +51,7 @@
             <Label text="Deposite" />
             <TextField fx:id="tfDeposited" prefHeight="25.0" prefWidth="83.0" />
             <Label text="To Funds" />
-            <TextField fx:id="tfFundDestination" prefHeight="25.0" prefWidth="83.0" />
+            <ChoiceBox fx:id="tfFundDestination" prefWidth="150.0" />
             <Button fx:id="btnDeposited" mnemonicParsing="false" onAction="#setBtnDeposited" text="Deposite" />
          </children>
          <padding>
@@ -59,12 +60,19 @@
       </VBox>
       <TextField disable="true" editable="false" layoutX="176.0" layoutY="588.0" prefHeight="17.0" prefWidth="516.0" promptText="Command Line:" />
       <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="79.0" text="Welcome:" underline="true" />
-      <Label layoutX="14.0" layoutY="619.0" prefHeight="17.0" prefWidth="79.0" text="Last visit time:" underline="true" />
+      <Label layoutX="14.0" layoutY="673.0" prefHeight="17.0" prefWidth="79.0" text="Last visit time:" underline="true" />
       <Label fx:id="lbUserName" layoutX="91.0" layoutY="14.0" text="userName" />
-      <Label layoutX="93.0" layoutY="619.0" text="loginTime" />
+      <Label layoutX="93.0" layoutY="673.0" text="loginTime" />
       <VBox layoutX="176.0" layoutY="225.0" prefHeight="353.0" prefWidth="516.0">
          <children>
-            <ListView prefHeight="365.0" prefWidth="516.0" />
+            <TableView fx:id="expenseTableView" prefHeight="358.0" prefWidth="516.0">
+              <columns>
+                <TableColumn fx:id="tfOfFundName" prefWidth="117.0" text="Fund" />
+                <TableColumn fx:id="colEventName" prefWidth="107.0" text="Event Name" />
+                  <TableColumn fx:id="colEventCost" prefWidth="117.0" text="Event Cost" />
+                  <TableColumn fx:id="colEventTime" prefWidth="107.0" text="Event Time" />
+              </columns>
+            </TableView>
          </children>
       </VBox>
    </children>
