--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -7,17 +7,13 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="631.0" prefWidth="957.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
-      <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;">
-         <children>
-            <ImageView fitHeight="170.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true" />
-         </children></VBox>
+      <VBox layoutX="13.0" layoutY="49.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: #e6e6e6;" />
       <VBox layoutX="176.0" layoutY="48.0" prefHeight="166.0" prefWidth="766.0" style="-fx-background-color: #e6e6e6;">
          <children>
             <TableView fx:id="fundTableView" onSort="#initialize" prefHeight="166.0" prefWidth="925.0">
@@ -61,7 +57,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </VBox>
-      <TextField disable="true" editable="false" layoutX="176.0" layoutY="588.0" prefHeight="25.0" prefWidth="449.0" promptText="Command Line:" />
+      <TextField fx:id="tfCommand" disable="true" editable="false" layoutX="176.0" layoutY="588.0" prefHeight="25.0" prefWidth="449.0" promptText="Command Line:" />
       <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="79.0" text="Welcome:" underline="true" />
       <Label fx:id="lbUserName" layoutX="91.0" layoutY="14.0" text="userName" />
       <VBox layoutX="176.0" layoutY="225.0" prefHeight="353.0" prefWidth="449.0">
