--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -90,12 +90,12 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <DatePicker promptText="From" />
-                  <DatePicker promptText="To" />
+                  <DatePicker fx:id="fromDate" promptText="From" />
+                  <DatePicker fx:id="toDate" promptText="To" />
                   <HBox prefHeight="33.0" prefWidth="137.0" spacing="20.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Search" />
-                        <Button mnemonicParsing="false" text="Reset" />
+                        <Button fx:id="btnTimeSearch" mnemonicParsing="false" onAction="#setBtnTimeSearch" text="Search" />
+                        <Button fx:id="btnTimeReset" mnemonicParsing="false" onAction="#setBtnTimeReset" text="Reset" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -110,8 +110,8 @@
                   <TextField promptText="To" />
                   <HBox layoutX="16.0" layoutY="145.0" prefHeight="33.0" prefWidth="137.0" spacing="20.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Search" />
-                        <Button mnemonicParsing="false" text="Reset" />
+                        <Button fx:id="btnCostSearch" mnemonicParsing="false" text="Search" />
+                        <Button fx:id="btnCostReset" mnemonicParsing="false" text="Reset" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -124,11 +124,21 @@
             </VBox>
          </children>
       </HBox>
-      <Button fx:id="btnExport" layoutX="633.0" layoutY="588.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Export File" />
-      <Button fx:id="btnImport" layoutX="632.0" layoutY="553.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Import File" />
+      <Button fx:id="btnExport" layoutX="795.0" layoutY="507.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Export File" />
+      <Button fx:id="btnImport" layoutX="793.0" layoutY="329.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Import File" />
       <Button fx:id="btnDelete1" layoutX="793.0" layoutY="230.0" mnemonicParsing="false" onAction="#deleteFund" prefHeight="25.0" prefWidth="149.0" text="Delete Fund" />
-      <TextField fx:id="tfImport" layoutX="719.0" layoutY="553.0" prefHeight="25.0" prefWidth="229.0" />
-      <TextField fx:id="tfExport" layoutX="719.0" layoutY="588.0" prefHeight="25.0" prefWidth="229.0" />
+      <TextField fx:id="tfImport" layoutX="793.0" layoutY="291.0" prefHeight="25.0" prefWidth="149.0" />
+      <TextField fx:id="tfExport" layoutX="793.0" layoutY="397.0" prefHeight="25.0" prefWidth="149.0" />
       <VBox layoutX="14.0" layoutY="48.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: gray;" />
+      <Label layoutX="795.0" layoutY="370.0" text="Export">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="793.0" layoutY="267.0" text="Import">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
