--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -124,21 +124,23 @@
             </VBox>
          </children>
       </HBox>
-      <Button fx:id="btnExport" layoutX="795.0" layoutY="507.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Export File" />
-      <Button fx:id="btnImport" layoutX="793.0" layoutY="329.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Import File" />
+      <Button fx:id="btnExport" layoutX="794.0" layoutY="518.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Export File" />
+      <Button fx:id="btnImport" layoutX="793.0" layoutY="332.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Import File" />
       <Button fx:id="btnDelete1" layoutX="793.0" layoutY="230.0" mnemonicParsing="false" onAction="#deleteFund" prefHeight="25.0" prefWidth="149.0" text="Delete Fund" />
-      <TextField fx:id="tfImport" layoutX="793.0" layoutY="291.0" prefHeight="25.0" prefWidth="149.0" />
-      <TextField fx:id="tfExport" layoutX="793.0" layoutY="397.0" prefHeight="25.0" prefWidth="149.0" />
+      <TextField fx:id="tfImport" layoutX="793.0" layoutY="294.0" prefHeight="25.0" prefWidth="149.0" />
+      <TextField fx:id="tfExport" layoutX="794.0" layoutY="482.0" prefHeight="25.0" prefWidth="149.0" />
       <VBox layoutX="14.0" layoutY="48.0" prefHeight="166.0" prefWidth="156.0" style="-fx-background-color: gray;" />
-      <Label layoutX="795.0" layoutY="370.0" text="Export">
+      <Label layoutX="795.0" layoutY="396.0" text="Export">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="793.0" layoutY="267.0" text="Import">
+      <Label layoutX="793.0" layoutY="270.0" text="Import">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <ChoiceBox fx:id="choiceBox1" layoutX="793.0" layoutY="417.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="choiceBox2" layoutX="793.0" layoutY="449.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
